# rtm-class-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
cmd/: jwt_client.py  run.py
src/: __init__.py  config.py  main.py
src/agent/: callback.py  jobs.py  lkpd_pdf.py  lkpd_storage.py  material_extractor.py  mcp.py  memory.py  model.py  rag.py  runtime.py  types.py  worker.py
src/agent/infra/: __init__.py  mcp_config.py  mcp_registry.py  memory_store.py  model_provider.py
src/agent/prompts/: __init__.py  lkpd_generation.py  material_generation.py
src/agent/runtime_helpers/: __init__.py  agent_factory.py  contracts.py  errors.py  internal_tools.py  mcp_insert.py  parsing.py  rag_context.py
src/agent/types/: __init__.py  aliases.py  common.py  exec.py  lkpd.py  (+4 more)
src/ai/: __init__.py  embeddings.py  gateway.py  llm.py
src/api/: __init__.py  job_submission.py  lkpd_routes.py  material_routes.py  oauth_routes.py  routes.py  schemas.py
src/auth/: __init__.py  jwt.py  rate_limit.py  revocation.py
src/core/: __init__.py  api_response.py  constants.py  exceptions.py  security.py
src/db/: session.py
src/jobs/: __init__.py  queue.py  tasks.py
src/schemas/: common.py  generate.py  rag.py
src/storage/: base.py  local.py  s3.py
src/utils/: text.py  token.py
tests/: payload-essay.json  test_agent_types.py  test_ai_gateway.py  test_auth_jwt.py  test_callback_client.py  test_callback_delivery.py  test_config_settings.py  test_jobs_store.py  test_lkpd_pdf.py  test_lkpd_storage.py  test_main_material_endpoint.py  test_material_extractor.py  test_material_routes.py  test_mcp_call.py  test_mcp_config.py  test_oauth_token.py  test_parsing_lenient.py  test_prompts_lkpd_generation.py  test_prompts_material_generation.py  test_quiz_generation.py  test_rag.py  test_rag_filters.py  test_rag_store.py  test_runtime_generation_contract.py  test_runtime_mcp_insert.py  test_worker.py
(+54 files in other folders)
