[project]
name = "rtm-class-ai"
version = "0.1.0"
description = "Standalone AI microservice with FastAPI, LangChain, and Chroma RAG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "python-dotenv",
  "langchain",
  "langchain-openai",
  "langchain-community",
  "chromadb",
  "openai",
  "httpx",
  "pypdf",
  "python-pptx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
